test: make every ground-truth file answer to the engine
0ab8915 pinned the exact rule set each scenario fires, and fixed the one
TRUTH.md that had a fired rule sitting in its "must NOT fire" list. That was
the right conclusion applied to one folder out of six. The other five were
still talking about a tool that no longer exists:

  incident-gc-storm    GCA005 listed as must-not-fire; the log says
                       "GCLocker Initiated GC", and the rule reports that line
  incident-thread-leak TDA005 listed as must-not-fire; all 80 leaked workers
                       are occupied in ThreadLeakService#lambda$leak$0
  incident-heap-leak   claimed HIS002 fires (it misses the 10% share floor at
                       9.32%, because the [B bag around it is 72% of the
                       histogram) and omitted GCA004, which does fire
  incident-exceptions  omitted EXC003, which fires on 40-in-one-minute
  healthy              said "14 rules" and accounted for 14 of 18

TruthDocTest now parses the prose and asserts three things per folder: the
SHOULD list equals the fired set, the must-NOT list is disjoint from it, and
the two together cover all 18 registered rules. Both shapes the corpus grew
up with are read -- id-prefixed bullets, and healthy's rule-by-rule table --
with GCA001-006 ranges and HIS001/HIS002 groups expanded. Mutation-checked:
moving a fired rule into the must-NOT list, deleting a table row, and naming
a rule that was never registered each fail the build with a message that says
what to do about it.

Each rewrite records the measurement behind the call rather than restating the
rule title, including the two boundary cases worth knowing before anyone tunes
a threshold: HIS002's 0.7 points, and GCA006 abstaining on four folders
because dividing pause time by a flushed window under 10 s says more about
JVM log buffering than about the JVM.

Also fixes the no-Docker capture snippet in both READMEs, which started the
victim without -Xlog:gc* and so coul